chore: fix that PD of overflow on Chrome

--- a/src/components/Expander/Expander.module.css
+++ b/src/components/Expander/Expander.module.css
@@ -1,5 +1,7 @@
 .Expander {
   --ne-details-max-height: auto;
+  --ne-details-overflow: none;
+  --ne-details-summary-position: relative;
 
   position: relative;
 }
